// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldVariant Component should generate select options: toolbarFieldOptions 1`] = `
[
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_variant, {"context":"lorem"})",
    "value": "lorem",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_variant, {"context":"ipsum"})",
    "value": "ipsum",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_variant, {"context":"dolor"})",
    "value": "dolor",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_variant, {"context":"sit"})",
    "value": "sit",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_variant, {"context":"none"})",
    "value": "",
  },
]
`;

exports[`ToolbarFieldVariant Component should handle updating through redux state with component: dispatch, component 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "filter": "variant",
        "type": "SET_QUERY",
        "value": "ipsum",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarFieldVariant Component should handle updating through redux state with hook: dispatch, hook 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      {
        "filter": "variant",
        "type": "SET_QUERY",
        "value": "dolor sit",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldVariant Component should render a basic component: basic 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder, {"context":"variant"})"
  ariaLabel="Select option"
  className=""
  data-test="toolbarFieldVariant"
  direction="down"
  id="generatedid-"
  isDisabled={false}
  isDropdownButton={false}
  isFlipEnabled={false}
  isInline={true}
  isToggleText={true}
  maxHeight={null}
  name={null}
  onSelect={[Function]}
  onSplitButton={[Function]}
  options={[]}
  placeholder="t(curiosity-toolbar.placeholder, {"context":"variant"})"
  position="left"
  selectedOptions="RHEL for x86"
  splitButtonVariant={null}
  toggleIcon={null}
  variant="single"
/>
`;
